--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="header">
         <a href="#"><img src="Grafix logo.jpg" height="70" width="250"  class="logo" alt=""></a>
-
+        
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct2.html">
-                <img src="product/pro2.jpg" alt="">
+                <a href="#"><img src="product/pro2.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -81,7 +81,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct3.html">
-                <img src="product/pro3.jpg" alt="">
+                    <a href="#"><img src="product/pro3.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -98,7 +98,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct4.html">
-                <img src="product/pro4.jpg" alt="">
+                    <a href="#"><img src="product/pro4.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -115,7 +115,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct5.html">
-                <img src="product/pro5.jpg" alt="">
+                    <a href="#"><img src="product/pro5.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"StreetWise Apparel"</h5>
@@ -128,7 +128,7 @@
                     </div>
                     <h4>₱489</h4>
                 </div>
-                <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                <a href="#"><img src="product/pro6.jpg" alt=""></a>
             </div>
             <div class="pro">
                 <a href="sproduct6.html">
