--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="pro-container">
             <div class="pro">
                 <a href="sproduct.html">
-                <img src="product/pro1.jpg" alt="">
+                <img src="pro1.jpg" alt="">
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -64,7 +64,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct2.html">
-                <a href="#"><img src="product/pro2.jpg" alt=""></a>
+                <a href="#"><img src="pro2.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -81,7 +81,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct3.html">
-                    <a href="#"><img src="product/pro3.jpg" alt=""></a>
+                    <a href="#"><img src="pro3.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -98,7 +98,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct4.html">
-                    <a href="#"><img src="product/pro4.jpg" alt=""></a>
+                    <a href="#"><img src="pro4.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -115,7 +115,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct5.html">
-                    <a href="#"><img src="product/pro5.jpg" alt=""></a>
+                    <a href="#"><img src="pro5.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"StreetWise Apparel"</h5>
@@ -128,7 +128,7 @@
                     </div>
                     <h4>₱489</h4>
                 </div>
-                <a href="#"><img src="product/pro6.jpg" alt=""></a>
+                <a href="#"><img src="pro6.jpg" alt=""></a>
             </div>
             <div class="pro">
                 <a href="sproduct6.html">
@@ -149,7 +149,7 @@
             </div>
             <div class="pro">
                 <a href="sproduct.html">
-                <img src="product/pro1.jpg" alt="">
+                <img src="pro1.jpg" alt="">
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
