--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
     <section id="product1" class="section-p1">
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct.html';">
-                <a href="#"><img src="product/pro1.jpg" alt=""></a>
+                <a href="#"><img src="pro1.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -60,7 +60,7 @@
                 <a href="sproduct.html"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct2.html';">
-                <a href="#"><img src="product/pro2.jpg" alt=""></a>
+                <a href="#"><img src="pro2.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -76,7 +76,7 @@
                 <a href="sproduct2.html"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct3.html';">
-                <a href="#"><img src="product/pro3.jpg" alt=""></a>
+                <a href="#"><img src="pro3.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -92,7 +92,7 @@
                 <a href="sproduct3.html"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct4.html';">
-                <a href="#"><img src="product/pro4.jpg" alt=""></a>
+                <a href="#"><img src="pro4.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"Don't mind 'bout the others, Just Play your own Game"</h5>
@@ -108,7 +108,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct5.html';">
-                <a href="#"><img src="product/pro5.jpg" alt=""></a>
+                <a href="#"><img src="pro5.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"StreetWise Apparel"</h5>
@@ -124,7 +124,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro" onclick="window.location.href='sproduct6.html';">
-                <a href="#"><img src="product/pro6.jpg" alt=""></a>
+                <a href="#"><img src="pro6.jpg" alt=""></a>
                 <div class="des">
                     <span>Grafix</span>
                     <h5>"StreetWise Apparel"</h5>
